# reanimator-library

./: .gitignore  CMakeLists.txt  README.md  build-reanimator-library.sh  buildall.sh  strace2ds-enums.h
include/: DataSeriesOutputModule.hpp  strace2ds-enums.h
src/: DataSeriesOutputModule.cpp  MakeSyncFileRangeMap.cpp  strace2ds.cpp
strace2ds-library/: CMakeLists.txt  DataSeriesOutputModule.cpp  DataSeriesOutputModule.hpp  buildall
strace2ds-library/tables/: snia_syscall_fields.table
strace2ds-library/xml/: access.xml  chdir.xml  chmod.xml  chown.xml  clone.xml  close.xml  creat.xml  dup.xml  dup2.xml  execve.xml  exit.xml  faccessat.xml  fchmod.xml  fchmodat.xml  fcntl.xml  fgetxattr.xml  flistxattr.xml  flock.xml  fork.xml  fremovexattr.xml  fsetxattr.xml  fstat.xml  fstatat.xml  fstatfs.xml  fsync.xml  ftruncate.xml  getdents.xml  getrlimit.xml  getxattr.xml  ioctl.xml  lgetxattr.xml  link.xml  linkat.xml  listxattr.xml  llistxattr.xml  lremovexattr.xml  lseek.xml  lsetxattr.xml  lstat.xml  mkdir.xml  (+35 more)
syscall-replayer/: build-syscall-replayer.sh
tables/: snia_syscall_fields.src  snia_syscall_fields.table
